--- a/application/modules/Admin/views/layouts/admin.html
+++ b/application/modules/Admin/views/layouts/admin.html
@@ -6,7 +6,7 @@
         <title>管理后台 - <?=Html::encode($_curr_resource_['resource_name'])?></title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <?=Html::css('/components/bootstrap/3.3.4/css/bootstrap.min.css')?>
+        <?=Html::css('/components/bootstrap/3.3.5/css/bootstrap.min.css')?>
         <?=Html::css('/components/bootstrap3-dialog/css/bootstrap-dialog.min.css')?>
         <!-- MetisMenu CSS -->
         <?=Html::css('/components/metisMenu/metisMenu.min.css')?>
@@ -16,8 +16,8 @@
         <!-- vue -->
         <?=Html::javascript('/components/vue/vue.min.js')?>
         <!-- JqueryPagination -->
-        <?=Html::css('/components/JqueryPagination/jquery.pagination.css')?>
-        <?=Html::javascript('/components/JqueryPagination/jquery.pagination-1.2.7.min.js')?>
+        <?=Html::css('/components/Mricode.Pagination/mricode.pagination.css')?>
+        <?=Html::javascript('/components/Mricode.Pagination/mricode.pagination.min.js')?>
         <!-- BootstrapValidator -->
         <?=Html::css('/components/bootstrapvalidator/css/bootstrapValidator.min.css')?>
         <?=Html::javascript('/components/bootstrapvalidator/js/bootstrapValidator.min.js')?>
@@ -119,7 +119,7 @@
         <!-- /#wrapper -->
 
         <!-- Bootstrap Core JavaScript -->
-        <?=Html::javascript('/components/bootstrap/3.3.4/js/bootstrap.min.js')?>
+        <?=Html::javascript('/components/bootstrap/3.3.5/js/bootstrap.min.js')?>
         <!-- Metis Menu Plugin JavaScript -->
         <?=Html::javascript('/components/metisMenu/metisMenu.min.js')?>
         <!-- bootstrap3-dialog -->
