--- a/application/modules/Admin/views/resource/manage.html
+++ b/application/modules/Admin/views/resource/manage.html
@@ -96,14 +96,18 @@ $(function(){
     $("#list_table").on('initTableData', function(){
         var $table = $(this);
         var $pagination = $table.next(".m-pagination");
-        if ($pagination.data('page')) {
-            $pagination.page('destroy');
+        var currentPageIndex = 0;
+        if ($pagination.data('pagination')) {
+            currentPageIndex = $pagination.data('pagination').currentPageIndex;
+            $pagination.pagination('destroy');
         }
 
         var params = $("#search").serializeArray();
         params.push({name:"sort", value: $table.data("sort")});
-        $pagination.page({
-            pageSize: '<?=PAGE_SIZE?>',
+        $pagination.pagination({
+//            pageSize: '<?=PAGE_SIZE?>',
+            pageSize: '2',
+            pageIndex: currentPageIndex,
             remote: {
                 url: '/admin/resource/getPageData',
                 params: params,
