--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -256,6 +256,10 @@ table.dataTable thead .sorting:after {
     font-family: fontawesome;
     color: rgba(50,50,50,.5);
 }
+table.dataTable thead > tr > th {
+     padding-left: 18px;
+     padding-right: 18px;
+ }
 
 .btn-circle {
     width: 30px;
