--- a/application/modules/Admin/views/user/login.html
+++ b/application/modules/Admin/views/user/login.html
@@ -106,7 +106,7 @@
             });
         </script>
 
-        <script src="http://static.geetest.com/static/tools/gt.js"></script>
+        <script src="//static.geetest.com/static/tools/gt.js"></script>
         <script type="text/javascript">
             $.get("/captcha/start?rand="+Math.round(Math.random()*100), function(data){
                 // 使用initGeetest接口
