--- a/application/modules/Admin/views/resource/editResource.html
+++ b/application/modules/Admin/views/resource/editResource.html
@@ -1,19 +1,22 @@
 <div class="row">
     <div class="col-sm-12">
-        <form id="resource_form" method="post" class="form-horizontal" role="form" action="{{requestUri}}">
+        <form id="resource_form" method="post" class="form-horizontal" role="form" action="{{requestUri}}" v-cloak>
             <div class="form-group">
                 <label class="control-label col-sm-3">上级资源</label>
                 <div class="col-sm-8">
                     <select name="resource_pid" class="form-control input-sm" v-model="resourceInfo.resource_pid">
                         <option value="0">无</option>
-                        <option v-for="resource in resourceList" value="{{resource.resource_id}}" v-html="resource.resource_name"></option>
+                        <option v-for="resource in resourceList" value="{{resource.resource_id}}">
+                            {{resource.resource_name}}
+                        </option>
                     </select>
                 </div>
             </div>
-            <div class="form-group">
+            <div class="form-group required">
                 <label class="control-label col-sm-3">资源名称</label>
                 <div class="col-sm-8">
-                    <input type="text" name="resource_name" class="form-control input-sm" placeholder="资源名称" v-model="resourceInfo.resource_name"
+                    <input type="text" name="resource_name" class="form-control input-sm" placeholder="资源名称"
+                           v-model="resourceInfo.resource_name"
                            data-bv-notempty="true"
 
                            data-bv-stringlength="true"
@@ -21,17 +24,17 @@
                     />
                 </div>
             </div>
-            <div class="form-group">
+            <div class="form-group required">
                 <label class="control-label col-sm-3">资源类型</label>
                 <div class="col-sm-8">
                     <select name="resource_type" class="form-control input-sm" v-model="resourceInfo.resource_type"
                             data-bv-notempty="true"
                     >
-                        <option v-for="type in typeList" value="{{type}}" v-html="type"></option>
+                        <option v-for="type in typeList" value="{{type}}">{{type}}</option>
                     </select>
                 </div>
             </div>
-            <div class="form-group" v-show="resourceInfo.resource_type === 'menu'">
+            <div class="form-group required" v-show="resourceInfo.resource_type === 'menu'">
                 <label class="control-label col-sm-3">菜单排序</label>
                 <div class="col-sm-8">
                     <input type="number" name="menu_sort" class="form-control input-sm" v-model="resourceInfo.menu_sort"
@@ -42,24 +45,28 @@
             <div class="form-group" v-show="resourceInfo.resource_type === 'menu'">
                 <label class="control-label col-sm-3">菜单图标样式</label>
                 <div class="col-sm-8">
-                    <input type="text" name="menu_icon_class" class="form-control input-sm" v-model="resourceInfo.menu_icon_class"
+                    <input type="text" name="menu_icon_class" class="form-control input-sm"
+                           v-model="resourceInfo.menu_icon_class"
                            placeholder="fa fa-home"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-3">URI</label>
                 <div class="col-sm-8">
-                    <input type="text" name="resource_uri" class="form-control input-sm" placeholder="/admin/resource" v-model="resourceInfo.resource_uri">
+                    <input type="text" name="resource_uri" class="form-control input-sm" placeholder="/admin/resource"
+                           v-model="resourceInfo.resource_uri">
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-3">是否启用</label>
                 <div class="col-sm-8">
                     <div class="radio-inline">
-                        <label><input type="radio" name="enable" value="<?=YES?>" v-model="resourceInfo.enable"> <?=YES?></label>
+                        <label><input type="radio" name="enable" value="<?=YES?>"
+                                      v-model="resourceInfo.enable"> <?=YES?></label>
                     </div>
                     <div class="radio-inline">
-                        <label><input type="radio" name="enable" value="<?=NO?>" v-model="resourceInfo.enable"> <?=NO?></label>
+                        <label><input type="radio" name="enable" value="<?=NO?>" v-model="resourceInfo.enable"> <?=NO?>
+                        </label>
                     </div>
                 </div>
             </div>
@@ -67,10 +74,12 @@
                 <label class="control-label col-sm-3">需要登录</label>
                 <div class="col-sm-8">
                     <div class="radio-inline">
-                        <label><input type="radio" name="login" value="<?=YES?>" v-model="resourceInfo.login"> <?=YES?></label>
+                        <label><input type="radio" name="login" value="<?=YES?>" v-model="resourceInfo.login"> <?=YES?>
+                        </label>
                     </div>
                     <div class="radio-inline">
-                        <label><input type="radio" name="login" value="<?=NO?>" v-model="resourceInfo.login"> <?=NO?></label>
+                        <label><input type="radio" name="login" value="<?=NO?>" v-model="resourceInfo.login"> <?=NO?>
+                        </label>
                     </div>
                 </div>
             </div>
@@ -78,16 +87,13 @@
                 <label class="control-label col-sm-3">开放资源</label>
                 <div class="col-sm-8">
                     <div class="radio-inline">
-                        <label><input type="radio" name="public" value="<?=YES?>" v-model="resourceInfo.public"> <?=YES?></label>
+                        <label><input type="radio" name="public" value="<?=YES?>"
+                                      v-model="resourceInfo.public"> <?=YES?></label>
                     </div>
                     <div class="radio-inline">
-                        <label><input type="radio" name="public" value="<?=NO?>" v-model="resourceInfo.public"> <?=NO?></label>
+                        <label><input type="radio" name="public" value="<?=NO?>" v-model="resourceInfo.public"> <?=NO?>
+                        </label>
                     </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-5 col-md-offset-3">
-                    <button type="submit" class="btn btn-primary">提交</button>
                 </div>
             </div>
         </form>
@@ -118,8 +124,10 @@
                     toast(result.message, 'error');
                     return;
                 }
-                BootstrapDialog.closeAll();
-                toast(result.message, 'success');
+                BootstrapDialog.closestDialog($form).close();
+                toast(result.message, 'success', function () {
+                    $("#list_table").trigger('initTableData');
+                });
             }, 'json');
             return false;
         });
