--- a/application/modules/Admin/views/role/addRole.html
+++ b/application/modules/Admin/views/role/addRole.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-sm-12">
-        <form id="role_form" method="post" class="form-horizontal" role="form" action="{{requestUri}}">
-            <div class="form-group">
+        <form id="role_form" method="post" class="form-horizontal" role="form" action="{{requestUri}}" v-cloak>
+            <div class="form-group required">
                 <label class="control-label col-sm-3">角色名称</label>
                 <div class="col-sm-8">
                     <input type="text" name="role_name" class="form-control input-sm" placeholder="角色名称"
@@ -12,7 +12,7 @@
                     />
                 </div>
             </div>
-            <div class="form-group">
+            <div class="form-group required">
                 <label class="control-label col-sm-3">角色Key</label>
                 <div class="col-sm-8">
                     <input type="text" name="role_key" class="form-control input-sm" placeholder="资源名称"
@@ -43,11 +43,6 @@
                     ></textarea>
                 </div>
             </div>
-            <div class="form-group">
-                <div class="col-md-5 col-md-offset-3">
-                    <button type="submit" class="btn btn-primary">提交</button>
-                </div>
-            </div>
         </form>
     </div>
 </div>
@@ -73,8 +68,10 @@
                     toast(result.message, 'error');
                     return;
                 }
-                BootstrapDialog.closeAll();
-                toast(result.message, 'success');
+                BootstrapDialog.closestDialog($form).close();
+                toast(result.message, 'success', function () {
+                    $("#list_table").trigger('initTableData');
+                });
             }, 'json');
             return false;
         });
