--- a/application/modules/Admin/views/role/allocResource.html
+++ b/application/modules/Admin/views/role/allocResource.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="col-md-3">
-            <button id="alloc_resource_submit" class="btn btn-primary">提交</button>
+            <button id="alloc_resource_submit" class="btn btn-primary hidden">提交</button>
         </div>
     </div>
 </div>
@@ -33,7 +33,7 @@
                 }
             }
         };
-        var zNodes = eval('(<?=json_encode($resource_tree_nodes)?>)');
+        var zNodes = $.parseJSON('<?=json_encode($resource_tree_nodes)?>');
         $.fn.zTree.init($("#resource_tree"), setting, zNodes);
         var zTree = $.fn.zTree.getZTreeObj("resource_tree");
         zTree.expandAll(true);
@@ -43,7 +43,6 @@
         $("#checkAllFalse").click(function () {
             zTree.checkAllNodes(false);
         });
-
 
         // 提交
         $("#alloc_resource_submit").click(function () {
