--- a/application/modules/Admin/views/user/addUser.html
+++ b/application/modules/Admin/views/user/addUser.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-sm-12">
-        <form id="user_form" method="post" class="form-horizontal" role="form" action="{{requestUri}}">
-            <div class="form-group">
+        <form id="user_form" method="post" class="form-horizontal" role="form" action="{{requestUri}}" v-cloak>
+            <div class="form-group required">
                 <label class="control-label col-sm-3">用户名</label>
                 <div class="col-sm-8">
                     <input type="text" name="username" class="form-control input-sm" placeholder="用户名"
@@ -13,7 +13,7 @@
                     />
                 </div>
             </div>
-            <div class="form-group">
+            <div class="form-group required">
                 <label class="control-label col-sm-3">密码</label>
                 <div class="col-sm-8">
                     <input type="password" name="password" class="form-control input-sm" placeholder="密码"
@@ -26,7 +26,7 @@
                     />
                 </div>
             </div>
-            <div class="form-group">
+            <div class="form-group required">
                 <label class="control-label col-sm-3">确认密码</label>
                 <div class="col-sm-8">
                     <input type="password" name="confirm_password" class="form-control input-sm" placeholder="确认密码"
@@ -38,7 +38,7 @@
                     />
                 </div>
             </div>
-            <div class="form-group">
+            <div class="form-group required">
                 <label class="control-label col-sm-3">角色</label>
                 <div class="col-sm-8">
                     <select name="role_id" class="form-control input-sm"
@@ -50,7 +50,7 @@
                             data-bv-greaterthan-message="请选择角色"
                     >
                         <option selected value="0">无</option>
-                        <option v-for="role in roleList" value="{{role.role_id}}" v-html="role.role_name"></option>
+                        <option v-for="role in roleList" value="{{role.role_id}}">{{role.role_name}}</option>
                     </select>
                 </div>
             </div>
@@ -88,15 +88,14 @@
             <div id="alert_message" class="hidden">
                 <dl>
                     <dt>用户名</dt>
-                    <dd v-html="username" style="margin-left: 2em;"></dd>
+                    <dd>
+                        <span class="text text-primary">{{username}}</span>
+                    </dd>
                     <dt>密码</dt>
-                    <dd v-html="password" style="margin-left: 2em;"></dd>
+                    <dd>
+                        <span class="text text-danger">{{password}}</span>
+                    </dd>
                 </dl>
-            </div>
-            <div class="form-group">
-                <div class="col-md-5 col-md-offset-3">
-                    <button type="submit" class="btn btn-primary">提交</button>
-                </div>
             </div>
         </form>
     </div>
@@ -126,8 +125,10 @@
                     toast(result.message, 'error');
                     return;
                 }
-                BootstrapDialog.closeAll();
-                toast(result.message, 'success');
+                BootstrapDialog.closestDialog($form).close();
+                toast(result.message, 'success', function () {
+                    $("#list_table").trigger('initTableData');
+                });
                 BootstrapDialog.alert({
                     type: BootstrapDialog.TYPE_SUCCESS,
                     size: BootstrapDialog.SIZE_SMALL,
