--- a/public/css/style.css
+++ b/public/css/style.css
@@ -128,6 +128,11 @@ footer {
     border-top: 1px solid #CCC;
 }
 
+.required > .control-label:before {
+    content: "*";
+    color: red;
+}
+
 [v-cloak] {
     display: none;
 }
